--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "lucide-react": "^0.263.1",
         "moment": "^2.29.4",
         "react-apexcharts": "^1.4.1",
+        "react-google-recaptcha": "^3.1.0",
         "react-select": "^5.7.4",
         "react-to-print": "^2.14.13",
         "sweetalert2": "^11.6.13",
